--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,30 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: white;
+  background: black;
 }
 
 a {
-  color: #00B7FF;
+  color: white;
+}
+
+#brand {
+  font-size: 36px;
+}
+
+#brand span {
+  line-height: 36px;
+}
+
+#brand .icon {
+  width: 36px;
+  height: 36px;
+  display: inline-block;
+  background: white;
+  color: black;
+  text-align: center;
+  border-radius: 200%;
+  margin-right: 10px;
+  font-size: 28px;
 }
